--- a/app/home-page.css
+++ b/app/home-page.css
@@ -11,5 +11,7 @@
 }
 
 .home-page .hero-img{
+  height: 93% !important;
   z-index: -1;
+  object-fit: cover;
 }
